--- a/src/componets/Nav/Nav.css
+++ b/src/componets/Nav/Nav.css
@@ -1,9 +1,10 @@
 .Nav {
     width: 100%;
     height: 10vh;
-    background-color: lightgray;
+    background-color: white;
     display: flex;
     align-items: center;
+    border-bottom: 0.5px rgb(243, 251, 253) solid;
 }
 
 .navbar-list {
