--- a/src/componets/Pause/Pause.css
+++ b/src/componets/Pause/Pause.css
@@ -27,7 +27,7 @@
     margin: 10px;
     border: #f0f0f3 1px solid;
     border-radius: 4px;
-    box-shadow: 0 2px 8px 0 rgba(0,0,0,.02),0 2px 14px 0 rgba(0,0,0,.1)
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,.02),0 2px 14px 0 rgba(0,0,0,.1);
 }
 
 .Pause .pause-card h5, .Pause .pause-card p {
