--- a/src/componets/Exercises/Exercises.css
+++ b/src/componets/Exercises/Exercises.css
@@ -8,4 +8,61 @@
     flex: 1;
     background-color: rgb(248, 248, 248);
     min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+/*ADD exercise COMPONENT*/
+.AddExercise {
+    min-width: 400px;
+    height: fit-content;
+    padding: 30px;
+    margin-top: 40px;
+    border: 1px solid lightgray;
+    border-radius: 4px;
+    background-color: white;
+    position: relative;
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,.02),0 2px 14px 0 rgba(0,0,0,.1);
+    z-index: 1
+}
+
+.exercise-input{
+    width: 100%;
+}
+
+/*Exercises ALL COMPONENT*/
+
+.ExercisesAll {
+    padding-top: 30px;
+}
+
+.ExercisesAll .exercise-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ExercisesAll .exercise-card {
+    background-color: white;
+    width: 400px;
+    padding: 20px;
+    margin: 10px;
+    border: #f0f0f3 1px solid;
+    border-radius: 4px;
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,.02),0 2px 14px 0 rgba(0,0,0,.1);
+    cursor: pointer;
+    z-index: 1;
+}
+
+.ExercisesAll .exercise-card h5, .ExercisesAll .exercise-card p {
+    margin: 0;
+}
+
+.AddExercise-btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+
