--- a/src/componets/Nav/SideNav.css
+++ b/src/componets/Nav/SideNav.css
@@ -11,6 +11,7 @@
 
 .sidenav-list li {
     width: 100%;
+    margin-bottom: 30px;
 }
 
 .sidenav-list li:hover {
@@ -25,4 +26,10 @@
     color: black;
     display: inline-block;
     padding: 5px 15px;
+}
+
+.sidenav-list li a i {
+    margin-right: 10px;
+    font-size: 16px;
+    color: #33C3F0;
 }
